# 2pg_cartesian

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
dimo/DIMO2/: README  res2  saida.txt
dimo/DIMO2/conflicts/: AllMinimalSets.java  Controller.java~  FilePreparation.java  FirstExperiments.java~  FrontCalculator.java  FrontCalculator.java~  GreedyAggregationKEMOSS.java~  GreedyAggregationKEMOSSIncremental.java~  GreedyDeltaMOSS.java  GreedyDeltaMOSS.java~  GreedyTreeGenerator.java~  GreedyTreeGenerator2PG.java  Individual_BS.java~  Problem.java  Problem.java~  Problem_BS.java  RandomProblem_BS_discrete.java~  TestProblem_BS.java
dimo/DIMO2/conflicts/sets/: ObjectiveSet.java  SetOfIntSets.java~  SetOfObjectiveSets.java  SetOfObjectiveSets.java~  TreeSet.java
dimo/DIMO2/test/: AllTests.java~  TestDeltaMOSSExactAlgorithm.java  TestDeltaMOSSExactAlgorithm.java~  TestIntSet.java  TestMOSSGreedyAlgorithm.java  TestObjectiveSet.java  testExactAlgo2.txt
dimo/src/: READMINE~  reduz_objective.py  reduz_objective.py~
include/: 2pg_cartesian_export.h  LoadConfig.h  algorithms.h  algorithms_types.h  aminoacids.h  aminoacids_io.h  aminoacids_types.h  analysis_types.h  consts.h  defines.h  diehdral.h  dirent.h  dominance.h  dominance_type.h  dominancep.h  dominancep_type.h  ea.h  ea_mono.h  ea_multi_obj_lib.h  ea_nsga2.h  ea_nsga2_types.h  ea_types.h  enums.h  futil.h  gromacs_objectives.h  load_parameters.h  maphash.h  math_owner.h  mc_metropolis.h  messages.h  mutations.h  nsga2.h  nsga2_type.h  objective.h  objective_io.h  osutil.h  owner_file_analysis.h  parameters_type.h  pdb_types.h  pdbatom.h  (+22 more)
scripts/: run_g_energy.sh
scripts/analysis/: .gitignore  2pg_cluster.sh  avg-sd.c  compute_rmsd_pdb_files.py  count_global_non_dominated_solution.py  dominance_analysis.sh  fitness.sh  front.sh  fronts.sh  join_pdbs_one_pdb.py  md.sh  objectives.sh  rmsd.sh  rmsd_graph.sh  rmsd_pdb.sh  rmsd_trj.sh  script_evolutivo.sh  script_evolutivo_DIMO.sh  script_ranking_analysis.sh
scripts/analysis/CASP/: READMINE  creating_front_removing_md.py  example_casp11_all_targets.txt  get_all_ranks_of_group_name_each_target.py  get_front_file.py  get_target_result_files.py
scripts/analysis/maxcluster/: maxcluster
scripts/checking/: check_structures_gromacs.py  prepare_structures_for_casp_submit.py  prepare_structures_from_casp_submit.py  rename_atoms.py  rename_to_pdb.sh  residue_renumber_all_pdbs.py
scripts/cluster_manager/: READMINE  READMINE~  multscp  multscp~  multssh  multssh~  nodes.txt
scripts/dimo/: READMINE
scripts/dimo/DIMO2/: LICENCE  res1  test.txt  testinput.txt  testinputPISAformat.txt
scripts/dimo/DIMO2/conflicts/: AllMinimalSets.java~  ConflictCalculator.java  ConflictCalculator.java~  Controller.java  DeltaCalculator.java  DeltaCalculator.java~  DeltaMOSSExactAlgorithm.java  DeltaMOSSExactAlgorithm.java~  DeltaMOSSGreedyAlgorithm.java  FilePopulation.java  FilePopulation.java~  FilePreparation.java~  FilePreparationKnapsack.java  FilePreparationKnapsack.java~  FileProblem.java  FileProblem.java~  FirstExperiments.java  GreedyAggregationDeltaMOSS.java  GreedyAggregationDeltaMOSS.java~  GreedyAggregationKEMOSS.java  GreedyAggregationKEMOSSIncremental.java  GreedyKEMOSS.java  GreedyKEMOSS.java~  GreedyTreeGenerator.java  Individual.java  Individual.java~  Individual_BS.java  MOSSExactAlgorithm.java  MOSSExactAlgorithm.java~  MOSSGreedyAlgorithm.java  MOSSGreedyAlgorithm.java~  MaxSpreadCalculator.java  MaxSpreadCalculator.java~  Output.java  Population.java  Population.java~  Population_BS.java  Population_BS.java~  Problem_BS.java~  RandomProblem_BS.java  (+5 more)
scripts/dimo/DIMO2/conflicts/sets/: Aggregation.java  IntSet.java  (+4 more)
scripts/dimo/DIMO2/test/: AllTests.java  TestDeltaMOSSGreedyAlgorithm.java  TestDeltaMOSSGreedyAlgorithm.java~  TestIntSet.java~  TestMOSSGreedyAlgorithm.java~  TestObjectiveSet.java~  TestRelation.java  TestRelation.java~  TestSetOfIntSets.java  TestSetOfIntSets.java~  TestSetOfObjectiveSets.java  TestSetOfObjectiveSets.java~  testExactAlgo1.txt
scripts/dm/: READMINE
scripts/dm/initial_individual/: back.sh  delete.sh  go.sh  mata.sh  md_implicit.mdp  mdout.mdp  min_all_implicit.mdp  run_implicit_folding_dms.sh
scripts/dm/minimization/: energy_minimization_implicit.mdp  min.sh  min.sh~
scripts/dm/refinement/: READMINE  eq_implicit.mdp  junta_pdbs.sh  mata_tudo.sh  md_implicit.mdp  min_none_implicit.mdp  molecular_dynamics.sh  nodefile  ordena.sh  reune.sh  run.sh
src/: CMakeLists.txt  LoadConfig.c  LoadConfig.cpp  Makefile  algorithms.c  aminoacids.c  aminoacids_io.c  diehdral.c  dominance.c  dominancep.c  ea.c  ea_mono.c  ea_multi_obj_lib.c  ea_nsga2.c  futil.c  gromacs_objectives.c  load_parameters.c  maphash.c  math_owner.c  mc_metropolis.c  messages.c  mutations.c  nsga2.c  objective.c  objective_io.c  osutil.c  owner_file_analysis.c  pdbatom.c  pdbio.c  populationio.c  protein.c  protpred-Gromacs-Crossover.c  protpred-Gromacs-Dominance.c  protpred-Gromacs-Front.c  protpred-Gromacs-MC_Metropolis.c  protpred-Gromacs-Mono.c  protpred-Gromacs-NSGA2.c  protpred-Gromacs-Random_Algorithm.c  protpred-Gromacs-Sort_Method_Files_by_Dominance_and_Front.c  protpred-Gromacs-Sort_Method_Files_by_Front_Dominance.c  (+21 more)
test/compute_diehdral/Alpha_Diehdral/: 1vii.fasta.txt~  configuracao.conf~
test/compute_diehdral/Beta_Diehdral/: configuracao.conf  pep.fasta.txt
test/compute_diehdral/caps/: configuracao.conf  configuracao.conf~
test/compute_objectivies/: .~lock.pop_0_1vii_200.pdb.odt#  compute_energy_implicit.mdp  configuracao.conf  configuracao.conf~
test/crossover/: configuracao.conf
test/dimo/: READMINE  configuracao.conf  energy_minimization_implicit.mdp
test/dominance/: READMINE  mult_example
test/random_number/: READMINE
test/refinement/: configuracao.conf  teste.mdp
test/rotation/1vii/: configuracao_ROT.conf  configuracao_ROT.conf~
test/rotation/1vii_casp/: configuracao_ROT.conf  configuracao_ROT.conf~
test/sorting/: compute_energy_implicit.mdp  configuracao.conf  configuracao.conf~  configuracao2.conf~  temporary_list_pdbs
